# nrf9160-aqi

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README.rst  lwm2m_client.rst  main.py  nilu.csv  nrf9160dk_nrf9160ns.overlay  overlay-ci.conf  overlay-low-power.conf  overlay-nbiot.conf  overlay-queue.conf  ozon.csv  plot.py  prj.conf  sample.yaml  stat.py  test.csv  thingy91_nrf9160ns.overlay  west.yaml
Cloud/: capture.py  coapclient.py  coapforwardproxy.py  coapreverseproxy.py  coapserver.py  db.sql  thingysim.py
bench/dk/: CMakeLists.txt  Kconfig  dk.c  nrf9160dk_nrf9160ns.overlay  prj.conf
bench/dk/lib/: CMakeLists.txt  dgso3.c  dgso3.h
bench/src/: main.cpp
boards/: thingy91_nrf9160ns.conf
child_image/spm/: prj.conf
configuration/thingy91_nrf9160ns/: pm_static.yml
database/: Capture.java  Client.java  Content.java  JDBCExample.java  JavaDBCom.java  Object.java  Observation.java  Observe.java  PostgreSQLJDBC.java  RESTcoms.java  Val.java  observe.json  schema.sql  test.json
leshan/: Californium.properties  README.md  pom.xml
leshan/aqi-server/: logback.xml  pom.xml
leshan/leshan-integration-tests/: Californium.properties
leshan/server/: pom.xml
leshan/thingy-sim/: pom.xml
lib/: CMakeLists.txt  ipso_colour_sensor.c  ipso_conc_sensor.c  openlx_sp_prtcl_sensor.c
lwm2m/: prj.conf
sensor/dgso3/: CMakeLists.txt  dgso3.c
sensor/sps30/: Kconfig  sps30.c
src/: config.h  main.c  settings.c  settings.h
src/lib/: .gitignore  (+10 more)
test/: CMakeLists.txt  dk.c  nrf9160dk_nrf9160ns.overlay  prj.conf
test/lib/: CMakeLists.txt  sps30_I2C.c  sps30_I2C.h
(+97 files in other folders)
